==1.1.x==
* Add some Unit Test
* Add NotSupportedMediaException, throwable by Provider
* Add NoContextException, throwable by MediaManager
* ProviderInterface have a new function : canHandleMedia
* ContextInterface has been updated : setName method
* ContextInterface has been updated : getProvider take a media as argument
* ContextInterface has been updated : getProviders
* ContextInterface has been updated : setProviders
* ContextInterface has been updated : setFormats
* ContextInterface has been updated : setManagedClasses
* Context take care of ContextInterface changes
* Context have a constructor whithout argument
* FileProvider take care of new Exception & canHandleMedia new function
* MediaManager take care of context modification & new exception
* Composer : dev-master is tag as 1.1.x
* Remove "format" feature.
* Add a generic AbstractServiceProvider to manager media with external services.
* Add a method to AbstractProvider to define a default template

==1.0.5==
* Remove dependency to Imagine

==1.0.4==
* Fix case between Armetiz & armetiz

==1.0.3==
* Code formatting
* BC Break : Move get/setContentType from MediaAdvancedInterface to MediaInterface
* Change name : Leezy become Armetiz

==1.0.2==
* Remove getPath method.
* Rename extension mediaPath to mediaUri.